
XXX
(Horms)
  * XXX
  - Fixed a logic bug in Makefile.popmap(.in) where the popmaps would
    never be built.
  - Fixed problem with pid file creation on FreeBSD (and others)?
    zh Jay
  - Fixed minor memory leak in pid file creation
  - Fixed segmentation fault in ldap module if the zeroth atribute
    returned was NULL. Jay Zh

----------------------------------------------------------------------

19th December 2003
(Horms)
  * 1.13
  - Fixed some typographical errors in the documentation. Simon Matter

----------------------------------------------------------------------

18th December 2003
(Horms)
  * 1.13beta1
  - Added sys/limits.h for ULONG_MAX on FreeBSD. Clement Laforet
  - Fixed bug in callback functions for user_server_port_t
    structure. This caused perdition to segmentation fault when
    the outgoing_server option was used. Thanks to Simon Matter
    for discovering this.
  - Fixed bug where user-supplied username was used for db lookup
    rather than the key derived from the query_string option
    if it is supplied. Roland Rosenfeld
  - Added missing documentation. paricularly for pid_file
    and ssl_ca_* options
  - Changed ssl_chain_file option to ssl_ca_chain_file
  - Fixed bug where debian module packages stopped perdition
    rather than restarting it. Roland Rosenfeld

----------------------------------------------------------------------

15th December 2003
(Horms)
   * 1.12
   - Debian and Red Hat package's init script will run perdition by default
     (previously /etc/default/perdition / /etc/sysconfig/perdition needed 
      to be edited to enable perdition)
   - Updated init information in man page
   - Fixed configure.in so --disable-ssl should actually work
   - Tidied up naming of logging macros
   - Fixed output of makebdb -u
   - makebdb recreated database rather than adding to it
   - bdb module no longer appends a spurious "\0" to keys
   - Better logging of failed gethopstbyname() and gethostbyaddr() calls